build(deploy): allow local image usage in deploy and update traefik and provision configuration

--- a/infrastructure/authentication/docker-compose-swarm.yaml
+++ b/infrastructure/authentication/docker-compose-swarm.yaml
@@ -1,8 +1,17 @@
 services:
   keycloak:
     depends_on: []
+    deploy:
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.auth.rule=Host(`auth.${HOST}`)"
+        - "traefik.http.routers.auth.entrypoints=web"
+        - "traefik.http.services.auth.loadbalancer.server.port=8080"
   keycloak-provision:
     depends_on: []
+    deploy:
+      restart_policy:
+        condition: on-failure
 
 networks:
   eventonight-network:
