--- a/services/users/docker-compose-swarm.yaml
+++ b/services/users/docker-compose-swarm.yaml
@@ -7,6 +7,12 @@ services:
         delay: 10s
         order: start-first
         failure_action: rollback
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.users.rule=Host(`users.${HOST}`)"
+        - "traefik.http.routers.users.entrypoints=web"
+        - "traefik.http.services.users.loadbalancer.server.port=${USERS_SERVICE_PORT}"
+        - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_eventonight-network"
     depends_on: []
 
 networks:
