--- a/infrastructure/gateway/docker-compose-swarm.yaml
+++ b/infrastructure/gateway/docker-compose-swarm.yaml
@@ -1,3 +1,14 @@
+services:
+  traefik:
+    environment:
+      - TRAEFIK_PROVIDERS_SWARM_ENDPOINT=unix:///var/run/docker.sock
+      - TRAEFIK_PROVIDERS_SWARM_WATCH=true
+      - TRAEFIK_PROVIDERS_SWARM_EXPOSEDBYDEFAULT=false
+    deploy:
+      placement:
+        constraints:
+          - node.role == manager
+
 networks:
   eventonight-network:
     driver: overlay
