--- a/services/events/docker-compose-swarm.yaml
+++ b/services/events/docker-compose-swarm.yaml
@@ -7,6 +7,12 @@ services:
         delay: 10s
         order: start-first
         failure_action: rollback
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.events.rule=Host(`events.${HOST}`)"
+        - "traefik.http.routers.events.entrypoints=web"
+        - "traefik.http.services.events.loadbalancer.server.port=${EVENTS_SERVICE_PORT}"
+        - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_eventonight-network"
     depends_on: []
 
 networks:
