--- a/services/interactions/docker-compose-swarm.yaml
+++ b/services/interactions/docker-compose-swarm.yaml
@@ -7,6 +7,12 @@ services:
         delay: 10s
         order: start-first
         failure_action: rollback
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.interactions.rule=Host(`interactions.${HOST}`)"
+        - "traefik.http.routers.interactions.entrypoints=web"
+        - "traefik.http.services.interactions.loadbalancer.server.port=${INTERACTIONS_SERVICE_PORT}"
+        - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_eventonight-network"
     depends_on: []
 
 networks:
