--- a/services/media/docker-compose-swarm.yaml
+++ b/services/media/docker-compose-swarm.yaml
@@ -7,6 +7,12 @@ services:
         delay: 10s
         order: start-first
         failure_action: rollback
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.media.rule=Host(`media.${HOST}`)"
+        - "traefik.http.routers.media.entrypoints=web"
+        - "traefik.http.services.media.loadbalancer.server.port=9020"
+        - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_eventonight-network"
     depends_on: []
 
 networks:
