--- a/services/frontend/docker-compose.yaml
+++ b/services/frontend/docker-compose.yaml
@@ -10,6 +10,12 @@ services:
       - "traefik.http.services.frontend.loadbalancer.server.port=${FRONTEND_SERVICE_PORT}"
       - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_eventonight-network"
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:${FRONTEND_SERVICE_PORT}/"]
+      interval: 5s
+      timeout: 3s
+      retries: 3
+      start_period: 10s
     deploy:
       replicas: ${FRONTEND_SERVICE_REPLICAS:-1}
       update_config:
