--- a/services/frontend/Dockerfile
+++ b/services/frontend/Dockerfile
@@ -21,5 +21,6 @@ WORKDIR /home/app
 ENV PORT=3000
 COPY --from=builder /home/app/dist ./dist
 COPY --from=builder /home/app/node_modules ./node_modules
+RUN apk add --no-cache curl
 RUN npm install -g serve@14.2.5
 ENTRYPOINT serve -s dist --no-clipboard -l ${PORT}
