--- a/services/interactions/docker-compose-swarm.yaml
+++ b/services/interactions/docker-compose-swarm.yaml
@@ -18,5 +18,6 @@ services:
 networks:
   eventonight-network:
     driver: overlay
+    attachable: true
   interactions-network:
     driver: overlay
