--- a/services/notifications/docker-compose-swarm.yaml
+++ b/services/notifications/docker-compose-swarm.yaml
@@ -18,5 +18,6 @@ services:
 networks:
   eventonight-network:
     driver: overlay
+    attachable: true
   notifications-network:
     driver: overlay
