build(deploy): setup working swarm deploy

--- a/infrastructure/authentication/docker-compose-swarm.yaml
+++ b/infrastructure/authentication/docker-compose-swarm.yaml
@@ -10,8 +10,7 @@ services:
   keycloak-provision:
     depends_on: []
     deploy:
-      restart_policy:
-        condition: on-failure
+      mode: replicated-job
 
 networks:
   eventonight-network:
