--- a/services/chat/docker-compose.yaml
+++ b/services/chat/docker-compose.yaml
@@ -11,6 +11,12 @@ services:
       - RABBITMQ_PASS=${RABBITMQ_PASS}
       - MONGO_HOST=mongo-chat
       - AUTH_PUBLIC_KEY_URL=http://users:${USERS_SERVICE_PORT}/public-keys
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:${CHAT_SERVICE_PORT}/health"]
+      interval: 5s
+      timeout: 3s
+      retries: 3
+      start_period: 10s
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.chat.rule=Host(`chat.${HOST}`)"
