--- a/services/notifications/Dockerfile
+++ b/services/notifications/Dockerfile
@@ -10,6 +10,9 @@ RUN npm prune --omit=dev
 
 FROM node:20-slim AS runner
 WORKDIR /home/app
+
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 COPY --from=builder /home/app/node_modules ./node_modules
 COPY --from=builder /home/app/dist ./dist
 
